--- a/index.html
+++ b/index.html
@@ -13,13 +13,58 @@
 .redText
 {
 	color: #8B0000;
-	font-size: 45;
+	font-size: 55;
 }
 .blackText
 {
 	color: black;
 
+	font-size: 45;
+}
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: white;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 185px;
+    transition: 0.3s;
+    font-size: 17px;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: lavender;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+    background-color: #ccc;
+}
+
+.whiteText
+{
+	color: lavender;
 	font-size: 35;
+
+}
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;    animation: fadeEffect 1s;
+}
+@keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
 }
 </style>
 
@@ -27,13 +72,23 @@
 #colorstrip
 {
 	height: 5px;
-	border-bottom: solid 48px lavender;
+	border-bottom: solid 62px lavender;
 }
  </style>
 <body>
 <div class="hero-image">
 <div id="colorstrip">
 <center><strong><span class="blackText">Janitor</span>&nbsp;<span class="redText">X</span> </strong></center>
+<div class="tab">
+	<a href="/home/adi/Desktop/JanitorX/index.html"><button class="tablinks">Home <img src="https://image.freepik.com/free-icon/home-ios-7-interface-symbol_318-38804.jpg" height="20" width="20"></img></button></a>
+	<a  href="/home/adi/Desktop/JanitorX/about.html"><button class="tablinks">About us</button></a>
+	<a  href="/home/adi/Desktop/JanitorX/about.html"><button class="tablinks">Contact us</button></a>
+</div>
+<br>
+<br>
+<left><strong><h1 class="whiteText">Vision: </h1></strong></left>
+<left><p1 style="color: black; font-size: 20;"> ... Insert Vision Here ... </p1></left>
+</div>
 </div>
 </div>
 </body>
