Added contact and about tab

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <html>
-<head><title> JanitorX-Home</title></head>
+<head><title> JanitorX-Contact us </title></head>
 <style>
 .hero-image {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/home/adi/Desktop/2560x1440-blue-abstract-noise-free-website-background-image.jpg");
@@ -67,15 +67,13 @@
     to {opacity: 1;}
 }
 </style>
-
 <style type="text/css">
 #colorstrip
 {
 	height: 5px;
 	border-bottom: solid 62px lavender;
 }
- </style>
-<body>
+</style>
 <div class="hero-image">
 <div id="colorstrip">
 <center><strong><span class="blackText">Janitor</span>&nbsp;<span class="redText">X</span> </strong></center>
@@ -83,11 +81,6 @@
 	<a href="/home/adi/Desktop/JanitorX/index.html"><button class="tablinks">Home <img src="https://image.freepik.com/free-icon/home-ios-7-interface-symbol_318-38804.jpg" height="20" width="20"></img></button></a>
 	<a  href="/home/adi/Desktop/JanitorX/about.html"><button class="tablinks">About us</button></a>
 	<a  href="/home/adi/Desktop/JanitorX/contact.html"><button class="tablinks">Contact us</button></a>
-</div>
-<br>
-<br>
-<left><strong><h1 class="whiteText">Vision: </h1></strong></left>
-<left><p1 style="color: black; font-size: 20;"> ... Insert Vision Here ... </p1></left>
 </div>
 </div>
 </div>
